# simplified_asciidoc

./: Cargo.toml
src/: blocks.rs  inlines.rs  lib.rs  main.rs  parse.rs  rules.rs
tests/files/: example.adoc
