[package]
name = "simplified_asciidoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = {version="4.5.17", features=["derive"]}
regex = "1.10.6"

[dev-dependencies]
tempfile = "3.12.0"
